# src/controllers/auth-controller.ts
@@ -1,5 +1,4 @@
 import { Request, Response } from "express"
-import * as HttpResponse from "../utils/http-response";
 import * as AuthServices from "../services/auth-services"
 
 export const registerNewUser = async (req: Request, res: Response) => {
@@ -7,5 +6,13 @@ export const registerNewUser = async (req: Request, res: Response) => {
 
     const httpResponse = await AuthServices.registerNewUserService(user);
     
+    res.status(httpResponse.statusCode).json(httpResponse.body);
+}
+
+export const loginUser = async (req: Request, res: Response) => {
+    const userLoginCredentials = req.body;
+
+    const httpResponse = await AuthServices.loginUserService(userLoginCredentials);
+
     res.status(httpResponse.statusCode).json(httpResponse.body);
 }
