# src/types/UserLoginCredentials.ts
@@ -1,0 +1,4 @@
+export interface UserLoginCredentials {
+    email: string,
+    password: string
+}
